--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		"esModuleInterop": true,
 		"strict": true,
 		"outDir": "dist",
+		"rootDir": "src",
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true
