--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mcp-memory-libsql",
   "version": "0.0.11",
   "description": "LibSQL-based persistent memory tool for MCP",
+  "license": "MIT",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
