--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ pnpm-debug.log*
 
 # Testing
 coverage/
+*.out
+*.test
+integration-report.json
 
 # Database files
 *.db
@@ -34,10 +37,7 @@ coverage/
 .DS_Store
 Thumbs.db
 
-integration-report.json
-database.test
-
-.env*
+# Data
 
 data/
 ollama_models/
