--- a/.github/workflows/ci-docker-test.yml
+++ b/.github/workflows/ci-docker-test.yml
@@ -22,6 +22,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Set up Docker Compose (v2)
+        # Use explicit tag to avoid resolution issues
         uses: docker/compose-action@v2
 
       - name: Set up Go
