--- a/.github/workflows/ci-docker-test.yml
+++ b/.github/workflows/ci-docker-test.yml
@@ -22,13 +22,13 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Set up Docker Compose (v2)
-        # Use explicit tag to avoid resolution issues
-        uses: docker/compose-action@v2
+        # Use official modern action name
+        uses: docker/compose@v2
 
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.24'
+          go-version: "1.24"
 
       - name: Show Docker and Compose versions
         run: |
@@ -44,4 +44,3 @@ jobs:
           PORT_SSE: ${{ env.PORT_SSE }}
           PORT_METRICS: ${{ env.PORT_METRICS }}
           PROFILES: ${{ env.PROFILES }}
-
