--- a/.github/workflows/ci-docker-test.yml
+++ b/.github/workflows/ci-docker-test.yml
@@ -22,8 +22,8 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Set up Docker Compose (v2)
-        # Use a specific released tag to ensure resolution
-        uses: docker/compose@v2.7.0
+        # Pin to a known stable release from Docker Compose releases
+        uses: docker/compose@v2.39.2
 
       - name: Set up Go
         uses: actions/setup-go@v4
