--- a/.github/workflows/ci-docker-test.yml
+++ b/.github/workflows/ci-docker-test.yml
@@ -4,42 +4,69 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+env:
+  PORT_SSE: 8080
+  PORT_METRICS: 9090
+  PROFILES: memory
+  GO_VERSION: "1.24"
+  DOCKER_COMPOSE_VERSION: "v2.39.2"
+
 jobs:
-  docker-test:
-    name: Build image and run integration docker-test
+  build:
+    name: Build Docker image
     runs-on: ubuntu-latest
-    env:
-      PORT_SSE: 8080
-      PORT_METRICS: 9090
-      PROFILES: memory
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Set up Docker Compose (v2)
-        # Pin to a known stable release from Docker Compose releases
-        uses: docker/compose@v2.39.2
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      # Set up Go with caching
+      - uses: actions/setup-go@v4
         with:
-          go-version: "1.24"
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
 
-      - name: Show Docker and Compose versions
-        run: |
+      # Docker Buildx setup (only if multi-arch, else skip QEMU)
+      - uses: docker/setup-buildx-action@v2
+
+      # Cache Docker layers
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      # Set up Docker Compose
+      - uses: docker/compose@main
+        with:
+          version: ${{ env.DOCKER_COMPOSE_VERSION }}
+
+      # Show versions
+      - run: |
           docker --version
           docker compose version
 
-      - name: Run integration docker-test
-        run: |
-          make docker-build
-          make docker-test
-        # Allow Docker Compose to use the env vars from the workflow
+      # Build image
+      - run: make docker-build
+
+  test:
+    name: Run integration tests
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-go@v4
+        with:
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
+
+      - uses: docker/setup-buildx-action@v2
+      - uses: docker/compose@v2
+        with:
+          version: ${{ env.DOCKER_COMPOSE_VERSION }}
+
+      - run: make docker-test
         env:
           PORT_SSE: ${{ env.PORT_SSE }}
           PORT_METRICS: ${{ env.PORT_METRICS }}
