--- a/.github/workflows/ci-docker-test.yml
+++ b/.github/workflows/ci-docker-test.yml
@@ -9,24 +9,38 @@ env:
   PORT_METRICS: 9090
   PROFILES: memory
   GO_VERSION: "1.24"
+  DOCKER_COMPOSE_VERSION: "v2.39.2"
 
 jobs:
-  build:
-    name: Build Docker image
+  docker-test:
+    name: Build image and run integration tests
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      # Set up Go with caching
-      - uses: actions/setup-go@v4
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v4
+
+      # Install Go with caching
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
 
-      # Docker Buildx setup (only if multi-arch, else skip QEMU)
-      - uses: docker/setup-buildx-action@v2
+      # Set up Docker Buildx (includes Compose v2 on ubuntu-latest)
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      # Cache Docker layers
+      # Optional: install a specific Compose version
+      - name: Install Docker Compose v2
+        run: |
+          mkdir -p ~/.docker/cli-plugins/
+          curl -SL https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-linux-x86_64 \
+            -o ~/.docker/cli-plugins/docker-compose
+          chmod +x ~/.docker/cli-plugins/docker-compose
+          docker compose version
+
+      # Cache Docker build layers
       - name: Cache Docker layers
         uses: actions/cache@v4
         with:
@@ -35,33 +49,19 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      # Set up Docker Compose
-      - uses: docker/compose@main
-
       # Show versions
-      - run: |
+      - name: Show Docker versions
+        run: |
           docker --version
           docker compose version
 
-      # Build image
-      - run: make docker-build
+      # Build Docker image
+      - name: Build Docker image
+        run: make docker-build
 
-  test:
-    name: Run integration tests
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-go@v4
-        with:
-          go-version: ${{ env.GO_VERSION }}
-          cache: true
-
-      - uses: docker/setup-buildx-action@v2
-      - uses: docker/compose@main
-
-      - run: make docker-test
+      # Run integration tests
+      - name: Run integration tests
+        run: make docker-test
         env:
           PORT_SSE: ${{ env.PORT_SSE }}
           PORT_METRICS: ${{ env.PORT_METRICS }}
