chore(env): correct syntax for PORT and METRICS_PORT in .env.example

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ MODE=single            # single | multi | voyageai
 PORT=8080
 METRICS_PORT=9090
 TRANSPORT=sse
-ADDR=:${PORT}
+PORT=:${PORT}
 SSE_ENDPOINT=/sse
 
 # Embeddings (choose one provider)
@@ -39,5 +39,5 @@ MULTI_PROJECT_DEFAULT_TOKEN=
 
 # Metrics
 METRICS_PROMETHEUS=true
-METRICS_ADDR=:${METRICS_PORT}
+METRICS_PORT=:${METRICS_PORT}
 
