fix(docker-compose): pass proper -addr :<PORT> in command array

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
         "-transport",
         "${TRANSPORT:-sse}",
         "-addr",
-        "-:${PORT:-8080}",
+        ":${PORT:-8080}",
         "-sse-endpoint",
         "${SSE_ENDPOINT:-/sse}",
       ]
