chore(docker-compose, makefile, ci): enhance data directory permissions and ensure host path creation in CI

--- a/.github/workflows/ci-docker-test.yml
+++ b/.github/workflows/ci-docker-test.yml
@@ -69,3 +69,5 @@ jobs:
           PORT_SSE: ${{ env.PORT_SSE }}
           PORT_METRICS: ${{ env.PORT_METRICS }}
           PROFILES: ${{ env.PROFILES }}
+          # ensure world-writable data dir in CI for container user
+          UMASK: "000"
