ci(release): use .releaserc as canonical; disable GitHub PR interactions; remove duplicate .releaserc.json

--- a/.releaserc
+++ b/.releaserc
@@ -155,7 +155,11 @@
     [
       "@semantic-release/github",
       {
-        "addReleases": "bottom"
+        "addReleases": "bottom",
+        "successComment": false,
+        "failComment": false,
+        "labels": false,
+        "releasedLabels": false
       }
     ],
     [
