ci(release): disable GitHub plugin release notes injection; no PR/issue interactions

--- a/.releaserc
+++ b/.releaserc
@@ -155,7 +155,7 @@
     [
       "@semantic-release/github",
       {
-        "addReleases": "bottom",
+        "addReleases": false,
         "successComment": false,
         "failComment": false,
         "labels": false,
