--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
   },
   "dependencies": {
     "@libsql/client": "^0.15.15",
-    "@modelcontextprotocol/sdk": "1.18.1",
+    "@tmcp/adapter-valibot": "^0.1.4",
+    "@tmcp/transport-stdio": "^0.3.0",
     "@types/node": "^24.5.2",
-    "dotenv": "^17.2.2"
+    "dotenv": "^17.2.2",
+    "tmcp": "^1.13.0",
+    "valibot": "^1.1.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.7",
